Fri Jun 14 13:01:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (update-config_files): rule to download config files.

	* tool/config.guess, tool/config.sub: remove and download from the
	  upstream.

	* tool/get-config_files: download config files from GNU.

Fri Jun 14 12:21:20 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (RUBY_SAFE_LEVEL_CHECK): suppress warnings
	  "left-hand operand of comma expression has no effect", on gcc 4.4.

Fri Jun 14 09:48:48 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* NEWS: add notes for $SAFE.

	* doc/security.rdoc: remove the description of $SAFE=4.

Fri Jun 14 00:14:29 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigdivrem): Zero test condition simplified.

Thu Jun 13 23:43:11 2013  Zachary Scott  <zachary@zacharyscott.net>

	* ext/bigdecimal/*: improve documentation, nodoc samples with @mrkn

Thu Jun 13 23:02:14 2013  Kouhei Sutou  <kou@cozmixng.org>

	* lib/xmlrpc/client.rb (XMLRPC::Client#http): Add reader for raw
	  Net::HTTP. [ruby-core:55197] [Feature #8461]
	  Reported by Herwin Weststrate. Thanks!!!

Thu Jun 13 22:44:52 2013  Kouhei Sutou  <kou@cozmixng.org>

	* lib/xmlrpc/client.rb (XMLRPC::Client#parse_set_cookies): Support
	  multiple names in a response. [ruby-core:41711] [Bug #5774]
	  Reported by Roman Riha. Thanks!!!
	* test/xmlrpc/test_client.rb (XMLRPC::ClientTest#test_cookie_override):
	  Add a test of the above case.

Thu Jun 13 22:35:50 2013  Kouhei Sutou  <kou@cozmixng.org>

	* lib/xmlrpc/client.rb (XMLRPC::Client#parse_set_cookies): Use
	  guard style.

Thu Jun 13 22:12:32 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/fileutils.rb (FileUtils#rmdir): fix traversal loop, not trying
	  remove same directory only.

Thu Jun 13 21:30:14 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (opt-dir), tool/ifchange: get rid of "alternate value"
	  expansion for legacy sh.  [ruby-dev:47420] [Bug #8524]

Thu Jun 13 21:24:09 2013  Tanaka Akira  <akr@fsij.org>
